mise ne place de l'encart fermeture indéterminée

--- a/styles.css
+++ b/styles.css
@@ -468,7 +468,7 @@ li.nav-telephone::before {
 }
 
 .fermeture p {
-  color: var(--white);
+  color: var(--white2);
   font-weight: 900;
   text-transform: uppercase;
 }
